# Computational_Methods

./: README.md
SolvingHeatEquation/: AnalyticalSolution.h  CMakeLists.txt  DuFortFrankel.cpp  ExplicitSchemes.h  Laasonen.h  Parameters.h  Printer.cpp  Richardson.cpp  SolvingHeatEquation.sln
SolvingHeatEquation/OutPutFiles/: ComputationalTime.csv  CrankNicolson.csv  DuFortFrankel.csv  Laasonen0.010000.csv  Laasonen0.025000.csv  Laasonen0.050000.csv  Laasonen0.100000.csv  README.md  Richardson.csv
SolvingHeatEquation/SolvingHeatEquation/: AnalyticalSolution.cpp  AnalyticalSolution.csv  AnalyticalSolution.h  ComputationalTime.csv  ComputationalTimehof.csv  CrankNicolson.cpp  CrankNicolson.csv  CrankNicolson.h  DuFortFrankehofl.csv  DuFortFrankel.cpp  DuFortFrankel.csv  DuFortFrankel.h  DuFortFrankelTESTENTIER.csv  ExplicitSchemes.cpp  ExplicitSchemes.h  ImplicitSchemes.cpp  ImplicitSchemes.h  Laasonen.cpp  Laasonen.h  Laasonen0.025000.csv  Parameters.cpp  Parameters.h  Printer.cpp  Printer.h  Richardson.cpp  Richardson.csv  Richardson.h  Richardsonhof.csv  SolvingHeatEquation.vcxproj  SolvingHeatEquation.vcxproj.filters  crankNicolson0.010000.csv  laasonen.csv  laasonen0.010000.csv  laasonen0.025000.csv  laasonen0.050000.csv  laasonen0.100000.csv  main.cpp
SolvingHeatEquation/SolvingHeatEquation/x64/Debug/: SolvingHeatEquation.exe.recipe  SolvingHeatEquation.ilk  vc143.idb
SolvingHeatEquation/SolvingHeatEquation/x64/Debug/SolvingH.8cf19ece.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SolvingHeatEquation.lastbuildstate  link.command.1.tlog  (+2 more)
